new version updated week 3 project
